Bug 1580241 - Fix usage of nsIDocShellTreeItem in nsDocShell::CanSavePresentation r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D56003

--HG--
extra : moz-landing-system : lando